# ChangeLog for dev-util/tkcvs
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/tkcvs/ChangeLog,v 1.13 2004/08/30 23:38:11 dholm Exp $

  31 Aug 2004; David Holm <dholm@gentoo.org> tkcvs-7.2.1.ebuild:
  Added to ~ppc.

*tkcvs-7.2.1 (11 Aug 2004)

  11 Aug 2004; Rainer Groesslinger <scandium@gentoo.org> +tkcvs-7.2.1.ebuild:
  bump to fix #40420

  02 Aug 2004; Ferris McCormick <fmccor@gentoo.org> tkcvs-7.1.4.ebuild:
  Stable for sparc.  Based on bug 32391 and current versions of tcl/tk, this
  is the most consistent version.

  21 Jun 2004; Ferris McCormick <fmccor@gentoo.org> tkcvs-7.1.2.ebuild,
  tkcvs-7.1.4.ebuild:
  Add ~sparc to tkcvs-7.1.4 and remove from tkcvs-7.1.2: tkcvs-7.1.2 hangs, and
  to quote the tkcvs CHANGELOG, tkcvs-7.1.4 contains "Bugfix for hangs in
  7.1.3"; presumably, this is the hang that sparc sees with 7.1.2. tkcvs-7.1.4
  has the advantage of actually working on sparc. Hence, the change (see also
  32391).

  29 Apr 2004; Danny van Dyk <kugelfang@gentoo.org> tkcvs-7.1.4.ebuild:
  marked ~amd64.

*tkcvs-7.1.4 (06 Nov 2003)

  06 Nov 2003; Brandy Westcott brandy@gentoo.org tkcvs-7.1.4.ebuild:
  Version bumped to 7.1.4. Closes bug #32391.

*tkcvs-7.1.2 (30 Dec 2002)

  30 Dec 2002; Martin Holzer <mholzer@gentoo.org> tkcvs-7.1.2.ebuild files/digest-tkcvs-7.1.2 :
  Version bumped.

*tkcvs-7.03 (27 Sep 2002)

  27 Sep 2002; Seemant Kulleen <seemant@gentoo.org> tkcvs-7.03.ebuild
  files/digest-tkcvs-7.03 :

  Upstream bugfix version bump. This one is reported by users to actually
  work.  Thanks to: gilles_gros@yahoo.com (Gilles G) in bug #8385

*tkcvs-6.4-r2 (1 Feb 2002)

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about